--- a/contact.html
+++ b/contact.html
@@ -24,30 +24,30 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Topics
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Technology</a>
-                        <a class="dropdown-item" href="#">Web development</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Write for us</a>
-                    </div>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/contact.html">Contact Us</a>
-                </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="/iCoder/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/iCoder/About.html">About</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Topics
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Technology</a>
+            <a class="dropdown-item" href="#">Web development</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Write for us</a>
+          </div>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/iCoder/contact.html">Contact Us</a>
+        </li>
 
 
-            </ul>
+      </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 rounded-pill" style="padding-left: 18px; padding-bottom: 8px;" type="search" placeholder="Search"
                     aria-label="Search">
