--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>
   <!-- navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"><strong><em>iCoder</em></strong></a>
+        <a class="navbar-brand" href="/iCoderblog/"><strong><em>iCoder</em></strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="/iCoder/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/iCoderblog/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/iCoder/About.html">About</a>
+          <a class="nav-link" href="/iCoderblog/About.html">About</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -43,7 +43,7 @@
           </div>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/iCoder/contact.html">Contact Us</a>
+          <a class="nav-link" href="/iCoderblog/contact.html">Contact Us</a>
         </li>
 
 
